<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>de.kuscheltiermafia</groupId>
  <artifactId>SchoolWars</artifactId>
  <version>0.1.0</version>
  <packaging>jar</packaging>

  <name>SchoolWars</name>

  <properties>
    <java.version>21</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <repositories>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>papermc</id>
          <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
      <repository>
          <id>minecraft-libraries</id>
          <name>Minecraft Libraries</name>
          <url>https://libraries.minecraft.net</url>
      </repository>
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
      <repository>
          <id>aikar</id>
          <url>https://repo.aikar.co/content/groups/aikar/</url>
      </repository>
  </repositories>

  <dependencies>
      <dependency>
          <groupId>com.mojang</groupId>
          <artifactId>brigadier</artifactId>
          <version>1.2.9</version>
      </dependency>
      <dependency>
          <groupId>io.papermc.paper</groupId>
          <artifactId>paper-api</artifactId>
          <version>1.21-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.github.realMorgon</groupId>
          <artifactId>SunriseLib</artifactId>
          <version>0.0.1.1</version>
      </dependency>
      <dependency>
          <groupId>co.aikar</groupId>
          <artifactId>acf-paper</artifactId>
          <version>0.5.1-SNAPSHOT</version>
      </dependency>
  </dependencies>
</project>
